public/assets/css/main.css
:root {
    --primary-white: #FBFBFB;
    --primary-green: #2C7733;
    --primary-yellow: #FF8523;
    --primary-red: #C12424;
    --primary-blue: #1E648A;
    --primary-black: #1C1C1C;

    --second-light-blue: #0393C2;
    --second-light-green: #99CB9D;
    --second-grey: #3b4a5a;
    --second-light-grey: #eef1ef;

    --font-family: 'gotham','sans-serif';
}

html {
    min-height: 100vh;
    margin: 0;
    padding: 0;
}

* {
    line-height: 1em;
}

li {
    margin: 5px 0;
}

li:first-child {
    margin-top: 0;
}

header h1 img {
    vertical-align: middle;
}

header {
    display: block;
    padding: 10px;
    background-color: #eef1ef;
    font-family: var(--font-family);
}
header a {
    text-decoration: none;
    display: inline-block;
    height: auto;
    background-size: 100%;
    background-repeat: no-repeat;
}
header a:link{
    text-decoration: none;
    color: var(--primary-green);
    font-family: var(--font-family)
}
header a:hover{
    text-decoration: none;
    color: var(--primary-green);
    font-family: var(--font-family)
}
header a:visited{
    text-decoration: none;
    color: var(--primary-green);
    font-family: var(--font-family)
}

header h1 {
    margin: 0;
}

@keyframes scaleX {
    from {opacity: 0;
        transform: translateX(-400px);
        };
}



nav {
    background-color: #1E648A;
    margin: 0%;
    width: 100%;
    overflow: visible;
    box-shadow: 0px 8px 9px -8px rgba(0,0,0,0.75);
    -webkit-box-shadow: 0px 8px 9px -8px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 8px 9px -8px rgba(0,0,0,0.75);
}

nav ul {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    list-style: none;
    padding: 0;
    margin: 0;
}

nav > ul {
    position: relative;
}

nav a {
    color: white;
    font-family: 'Gotham', sans-serif;
    text-decoration: none;
    
}

nav ul li {
    transition:all 0.25s;
    padding: 1em;
    padding-inline: initial;
}

.navbarDropOption ul {
    display: none;
    flex-direction: column;
    justify-content: space-between;
    background-color: #025255;
    margin-top: 1em;
    padding: 0%;
    position: absolute;
    animation-name: opacity;
    animation-duration: 1s;
    width: max-content;
}

.navbarDropOption li {
    text-align: center;
    width: 100%;
    background-color: var(--second-grey);
    transition: all 0.25s;
}

.navbarDropOption:hover > ul, .navbarDropOption ul:hover {
    display: flex;
}

nav li:hover {
    position: relative;
    z-index: 2;
    transform: scale(1.1);
    background-color:#0393C2;
}

.navbarDropOption > ul > li:hover {
    background-color: #0393C2;
}

@keyframes opacity {
   0% {opacity: 0};
  100% {opacity: 1};
}

#hamburgerMenu {
    display: none;
    cursor: pointer;
    position: absolute;
    width: 30px;
    height: 35px;
    margin: 0;
    opacity: 0;
}

label[for=hamburgerMenu] {
    display: none;
    border-radius: 3px;
    background: var(--second-light-blue);
    position: relative;
    height: 5px;
    width: 30px;
    margin: 1em 0;
    cursor: pointer;
}

label[for=hamburgerMenu]:before {
    border-radius: 3px;
    background: var(--primary-white);
    content: '';
    position: absolute;
    top: -10px;
    left: 0;
    width: 30px;
    height: 5px;
}

label[for=hamburgerMenu]:after {
    border-radius: 3px;
    background: var(--second-light-green);
    content: '';
    position: absolute;
    left: 0;
    top: 10px;
    width: 30px;
    height: 5px;
}

@media (max-width:708px) {
    nav {
        width: auto;
        display: flex;
        height: auto;
        flex-direction: column;
        padding-left: 10%;
        margin: 0;
    }

    li.navbarDropOption {
       width: 11ch;
    }

    nav li:hover {
        background-color: #0393C2;
    }

    

    .navbarDropOption > ul {
        margin-left: 11ch;
        margin-top: -2em;
        background-color: var(--second-grey)
    }

    .navbarDropOption > .gp {
        margin-top: -3em;
    }

    .navbarDropOption > ul > li:hover {
        background-color: #0393C2;
    }

    nav ul {
        flex-direction: column;
        align-items: flex-start;
    }

    #hamburgerMenu {
        display: inline-block;
    }

    label[for=hamburgerMenu] {
        display: inline-block;
        
    }

    nav #hamburgerMenu:not(:checked) ~ ul {
        display: none;
    }

    

}

@media (max-width:436px) {
    header a{
        font-size: smaller;
    }
    nav a{
        font-size: small;
    }
    footer {
        font-size: smaller;
    }
    footer p {
        margin-bottom: 0;
    }
}


body {
    min-height: 100vh;
    width: 100%;
    margin: 0%;
    background-color: #99CB9D;
    font-family: 'Gotham';
    display:grid;
    grid-template-rows: min-content min-content auto min-content;
}

footer {
    background-color: #2C7733;
    color: var(--second-light-grey);
    padding: 0;
    text-align: center;
    max-height: 5.5em;
    align-content: last baseline;
}

footer > p {
    margin: 0.5em 0;
}

footer > ul {
    list-style: none;
    margin: 0.5em 0;
    padding: 0;
}

/*
Hasta aca es todo el index, de header, 
footer y navbar

Vamos ahora con el login
*/

.login-container{
    box-shadow: 0 0 3px var(--primary-black);
    padding: 20px;
    width: 300px;
    text-align: center;
    align-self: center;
    margin-left: 37vw;
}

@media (max-width:565px) and (min-width:401px) {
    .login-container{
        margin-left: 10vw;
    }
}


@media (max-width:679px) and (min-width:566px) {
    .login-container{
        margin-left: 21vw;
    }
}

@media (max-width:865px) and (min-width:680px) {
    .login-container{
        margin-left: 25vw;
    }
}

@media (max-width:1000px) and (min-width:866px) {
    .login-container{
        margin-left: 30vw;
    }
}

@media (max-width:1361px) and (min-width:1001px) {
    .login-container{
        margin-left: 37vw;
    }
}


.login-form label {
    display: block;
    font-size: 14px;
    margin-bottom: 5px;
    color: #555555;
}

.login-form input {
    width: 100%;
    padding: 8px;
    margin-bottom: 5px;
    box-sizing: border-box;
    border: 1px solid #cccccc;
    border-radius: 4px;
    font-size: 14px;
}


.login-form a{
    text-decoration: underline;
    color: var(--second-grey);
    font-family: var(--font-family)
}

.login-form button {
    width: 100%;
    padding: 10px;
    box-sizing: border-box;
    background-color: #4caf50;
    color: #ffffff;
    border: none;
    margin-bottom: 5px;
    border-radius: 4px;
    font-size: 16px;
    cursor: pointer;
}

.login-form button:hover {
    background-color: #45a049;
}

